--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.2"
+  },
+  "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.6",
+    "@types/google.maps": "^3.55.7",
+    "axios": "^1.6.8"
   }
 }
